--- a/angular-client/src/index.html
+++ b/angular-client/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="light">
   <app-root></app-root>
 </body>
 </html>
